# Statystyka

./: LICENSE  README.md  main.py  pyproject.toml
app/: main.py  models.py
app/calculator/: calculator.py
app/templatesx/: analiza_rozkladu.html  index.html  kwantyl_rozkladu_normalnego.html  kwantyl_standardowy copy.html  nie_uczciwy_rzut_kostka.html  prawdopodobienstwo_przedzialu.html  prawdopodobienstwo_ze_wieksze.html  results.html  rozklad_normalny.html  uczciwy_rzut_kostka.html
tests/: test.py
