[tool.poetry]
name = "Statystyka"
version = "0.0.1"
description = "Liczy za mnie zadania ze Statystyki"
authors = ["0lch4 <127250399+0lch4@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0" 
fastapi = "0.95.1"
uvicorn = "0.22.0"
jinja2 = "3.1.2"
httpx = "0.24.0"
pathlib = "1.0.1"
numpy = "1.26.2"
scipy = "1.11.4"
matplotlib="3.8.2"
python-multipart="0.0.6"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"